# RP2040

./: README.md
Lab1/p1_ramos/: CMakeLists.txt  adc.c  adc.h  main.c  serialUtils.c  serialUtils.h  timer.c  timer.h
Lab2/p2_ramos/: CMakeLists.txt  events.c  events.h  kbi.c  kbi.h  lcd.c  lcd.h  main.c  rtc.c  rtc.h  timer.c  timer.h  utils.c  utils.h
Lab3/: p3_ramos.rar
Lab3/p3_ramos/: CMakeLists.txt  events.c  events.h  i2c_eeprom.c  i2c_eeprom.h  main.c  timer.c  uart._gps.c  uart_gps.h
Lab3/p3_ramos/include/: events.h  i2c_eeprom.h  lcd.h  uart_gps.h
Lab3/p3_ramos/src/: events.c  i2c_eeprom.c  lcd.c  main.c  uart_gps.c
Lab4/: p4_ramos.rar
Lab4/p4_ramos/: CMakeLists.txt
Lab4/p4_ramos/include/: adc.h  events.h  pwm.h  uart_bt.h  uart_gps.h
Lab4/p4_ramos/src/: adc.c  events.c  main.c  pwm.c  timer.c  uart_bt.c  uart_gps.c
Project/MotorApp/: App.js  app.json  package.json
Project/MotorApp/android/: settings.gradle
Project/MotorApp/android/app/: _BUCK  build.gradle
Project/MotorApp/android/app/src/debug/java/com/motorapp/: ReactNativeFlipper.java
Project/MotorApp/android/app/src/main/: AndroidManifest.xml
Project/MotorApp/android/app/src/main/java/com/motorapp/: MainActivity.java  MainApplication.java
Project/MotorApp/components/: constants.js
Project/MotorApp/components/bluetooth/: Bluetooth.js  Device.js  Subtitle.js  Toggle.js
Project/MotorApp/components/controlTabs/: CustomSlider.js  Tabs.js  constants.js
Project/MotorApp/components/controlTabs/closedLoop/: ClosedLoop.js  ConstantInput.js  styles.js
Project/MotorApp/components/controlTabs/openLoop/: OpenLoop.js  styles.js
Project/MotorApp/components/home/: Home.js
Project/MotorApp/components/mainTabs/: Tabs.js  constants.js
Project/MotorApp/components/mainTabs/control/: ControlPanel.js  CustomSlider.js  styles.js
Project/MotorApp/components/mainTabs/monitoring/: CircularSpeedometer.js  MonitoringPanel.js  Thermotast.js  styles.js
Project/MotorApp/components/monitoring/: CustomBarChart.js  ErrorDisplay.js  MonitoringPanel.js
Project/MotorApp/components/motorInformation/: Feature.js  MotorInformation.js
Project/MotorApp/components/navigation/: DrawerNavigation.js  MenuItem.js
Project/MotorApp/ios/: Podfile
Project/MotorApp/ios/MotorApp/: AppDelegate.m  Info.plist  LaunchScreen.storyboard
Project/MotorApp/ios/MotorApp.xcodeproj/: project.pbxproj
Project/MotorApp/ios/MotorApp.xcodeproj/xcshareddata/xcschemes/: MotorApp.xcscheme
Project/MotorApp/ios/MotorAppTests/: MotorAppTests.m
Project/motor_characterization/: CMakeLists.txt
Project/motor_characterization/include/: adc.h  events.h  pwm.h  timer.h  uart_bt.h
Project/motor_characterization/src/: adc.c  events.c  main.c  pwm.c  uart_bt.c
Project/motor_control/: CMakeLists.txt
Project/motor_control/include/: FreeRTOSConfig.h  events.h  pwm.h  tasks.h  uart_bt.h
Project/motor_control/src/: events.c  main.c  pwm.c  tasks.c  uart_bt.c
Tests/blink/: CMakeLists.txt  main.c
Tests/ldr/: CMakeLists.txt  LDR.c
Tests/serial/: CMakeLists.txt  serial.c
Tests/tempSensor/: CMakeLists.txt  tempSensor.c
Tests/uart/: CMakeLists.txt  uart.c
